# openlearn

./: .eslintrc.cjs  .gitignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
content/blank/: content.json  manifest.json
content/example/: content.json  manifest.json
docs/: ARCHITECTURE.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_shop.sql
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  scheduler.rs  secret.rs  state.rs  util.rs
src-tauri/src/ai/: mod.rs  providers.rs
src-tauri/src/commands/: achievements.rs  ai.rs  content.rs  data.rs  gamification.rs  mod.rs  settings.rs  shop.rs  stats.rs  study.rs
src-tauri/src/db/: mod.rs
src-tauri/src/services/: achievements.rs  content.rs  data.rs  gamification.rs  mod.rs  settings.rs  shop.rs  stats.rs  study.rs
src/components/: Layout.tsx  Markdown.tsx  Sidebar.tsx  Splash.tsx  TopBar.tsx  WhatsNew.tsx  ui.tsx
src/lib/: api.ts  cardTypes.ts  changelog.ts  cosmetics.ts  format.ts  types.ts
src/pages/: Achievements.tsx  CardEditor.tsx  ComingSoon.tsx  Dashboard.tsx  DeckDetail.tsx  Decks.tsx  Exams.tsx  Material.tsx  Oral.tsx  Paths.tsx  Settings.tsx  Shop.tsx  Stats.tsx  Study.tsx  Tutor.tsx
src/store/: useStore.ts
src/styles/: global.css
src/theme/: ThemeProvider.tsx
