[package]
name = "openlearn"
version = "0.2.0"
description = "OpenLearn — gamified learning with optional AI. Local, privacy-first, offline-capable."
authors = ["OpenLearn contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "openlearn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
keyring = "2"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
zeroize = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
